# code-jam-9

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ball.py  client.py  pyproject.toml  question_tests.py  requirements.txt  server.py
assets/shaders/: fragment.glsl
backend/: ball.py  server.py
client/: index.html  package-lock.json  package.json
client/public/: app.css  client.js  index.html
dynamic-dryads/: .gitignore  question_tests.py
dynamic-dryads/client/: package.json
dynamic-dryads/client/public/: app.css  client.js
dynamic-dryads/server/: connections.py
frontend/: client.py  main.py  shader.glsl
server/: __main__.py  connections.py  questions.json  questions.py
zesty-zombies/: README.md  client.py  requirements.txt
zesty-zombies/.github/workflows/: lint.yaml
